.sbtserver/previous.log
New log file opened at Sun Sep 18 02:59:17 CEST 2016 by 13092@powercube
jvm 13092@powercube
jvm vmName=Java HotSpot(TM) 64-Bit Server VM vmVendor=Oracle Corporation vmVersion=25.101-b13
jvm specName=Java Virtual Machine Specification specVendor=Oracle Corporation specVersion=1.8
jvm arguments: [-Xms256m, -Xmx1024m, -XX:MetaspaceSize=64m, -XX:MaxMetaspaceSize=256m]
Starting event engine
Starting sbt command engine
Waiting for sbt command engine
Command engine arguments=List()
Command engine baseDirectory=/home/heebinho/acceler8
Command engine initial remaining commands List(--initialize, onFailure load-failed, boot, server-send-ready-for-request, server-handle-next-server-request)
> --initialize
> initialize
> onFailure load-failed
> boot
> reload
[Loading] Scanning directory /home/heebinho/acceler8/project
/home/heebinho/acceler8/project/plugins.sbt:25: error: not found: value EclipseKeys
EclipseKeys.projectFlavor := EclipseProjectFlavor.Java
^
Type error in expression
> load-failed
Failed to load project.
> server-wait-for-reboot
Done executing sbt server engine, result Right(Exit(0))
Closing listening server socket
Waiting for socket thread
Waiting for request processor thread
Waiting for command engine result
Returning control to sbt launcher with result Exit(0)
Closing the 13092@powercube logs at Sun Sep 18 02:59:44 CEST 2016, goodbye.
